# ag-kernel

./: .gitignore  CHANGELOG.md  CRITICAL_AUDIT_REPORT.md  PRE_COMMIT_SUMMARY.md  README.md  RELEASE_NOTES_v0.2.0.md  pyproject.toml  test_viz.py
.claude/agents/: core-c.md  data-adapters.md  orchestrator.md  py-api.md  rust-bridge.md  viz-tearsheet.md
core/: engine.c  engine.h  types.h
crates/ag-core/: Cargo.toml
crates/ag-core-sys/: Cargo.toml  build.rs
crates/ag-core-sys/src/: lib.rs
crates/ag-core/src/: candle.rs  candle_parser.rs  lib.rs  market_event.rs
examples/: run_backtest.py
examples/data/: btcusdt_aggtrades_sample.csv
python/ag_backtester/: __init__.py  engine.py  results.py
python/ag_backtester/data/: __init__.py  aggtrades.py  converter.py  feeds.py  tick_aggregator.py
python/ag_backtester/userland/: __init__.py  auto_ticksize.py
python/ag_backtester/viz/: __init__.py  metrics.py  style.py  tearsheet.py
scripts/: benchmark_parquet.py  example_converter_usage.py  generate_test_data.py
tests/integration/: test_scaling_e2e.py
tests/unit/: test_batch_mode.py  test_engine_scaling.py  test_fee_accounting.py
