[package]
name = "ag-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "_ag_core"
crate-type = ["cdylib"]

[dependencies]
ag-core-sys = { path = "../ag-core-sys" }
pyo3 = { workspace = true }

# OHLC data structures and parsers
bytemuck = { version = "1.14", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[build-dependencies]
pyo3-build-config = "0.22"
